登录注册页面基本成功，差下载账单。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jungle.keepinmind1">
 
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -78,7 +77,9 @@
         <activity android:name=".Activity.SpeechRecognitionActivity" />
         <activity android:name=".Activity.AddRecordActivity" />
         <activity android:name=".Activity.GuPiaoContentActivity" />
-        <activity android:name=".Activity.PassageActivity" ></activity>
+        <activity android:name=".Activity.PassageActivity" />
+        <activity android:name=".Activity.SignInActivity" />
+        <activity android:name=".Activity.RegisterActivity"></activity>
     </application>
 
 </manifest>
