--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     })
     compile files('libs/Msc.jar')
     compile files('libs/jxl.jar')
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'com.orhanobut:logger:2.1.0'
@@ -50,7 +51,6 @@ dependencies {
     compile 'com.contrarywind:Android-PickerView:3.0.6'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.leon:lfilepickerlibrary:1.7.0'
-    compile 'com.rengwuxian.materialedittext:library:2.1.4'
-    compile 'com.android.support:cardview-v7:25.0.+'
+    compile 'com.android.support:cardview-v7:25.0.1'
     testCompile 'junit:junit:4.12'
 }
