--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,7 +79,8 @@
         <activity android:name=".Activity.GuPiaoContentActivity" />
         <activity android:name=".Activity.PassageActivity" />
         <activity android:name=".Activity.SignInActivity" />
-        <activity android:name=".Activity.RegisterActivity"></activity>
+        <activity android:name=".Activity.RegisterActivity" />
+        <activity android:name=".Activity.PersonalInformationActivity"></activity>
     </application>
 
 </manifest>
