--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jungle.keepinmind1">
-
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -80,7 +80,6 @@
         <activity android:name=".Activity.PassageActivity" />
         <activity android:name=".Activity.SignInActivity" />
         <activity android:name=".Activity.RegisterActivity" />
-        <activity android:name=".Activity.PersonalInformationActivity"></activity>
     </application>
 
 </manifest>
